--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
   "devDependencies": {
+    "@nx/angular": "^20.0.6",
     "@nx/js": "20.0.6",
-    "@swc-node/register": "~1.6.7",
-    "@swc/core": "~1.3.85",
+    "@swc-node/register": "~1.10.9",
+    "@swc/core": "~1.7.40",
     "nx": "20.0.6",
     "prettier": "^2.6.2",
-    "typescript": "~5.2.2"
+    "typescript": "~5.5.4"
   }
 }
