--- a/package.json
+++ b/package.json
@@ -37,11 +37,17 @@
     "@angular/language-service": "~18.2.0",
     "@eslint/js": "^9.8.0",
     "@nx/angular": "20.0.7",
+    "@nx/cypress": "20.0.7",
+    "@nx/esbuild": "20.0.7",
     "@nx/eslint": "20.0.7",
     "@nx/eslint-plugin": "20.0.7",
-    "@nx/jest": "17.1.2",
+    "@nx/jest": "20.0.7",
     "@nx/js": "20.0.7",
+    "@nx/next": "20.0.7",
+    "@nx/nest": "20.0.7",
+    "@nx/node": "20.0.7",
     "@nx/web": "20.0.7",
+    "@nx/webpack": "20.0.7",
     "@nx/workspace": "20.0.7",
     "@schematics/angular": "~18.2.0",
     "@swc-node/register": "~1.9.1",
@@ -49,7 +55,7 @@
     "@swc/helpers": "~0.5.11",
     "@types/express": "4.17.14",
     "@types/jest": "^29.4.0",
-    "@types/node": "16.11.7",
+    "@types/node": "20.0.0",
     "@typescript-eslint/utils": "^8.0.0",
     "angular-eslint": "^18.3.0",
     "eslint": "^9.8.0",
@@ -58,11 +64,19 @@
     "jest-environment-jsdom": "^29.4.1",
     "jest-preset-angular": "~14.1.0",
     "nx": "20.0.7",
+    "nx-cloud": "19.1.0",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.5.2",
     "typescript-eslint": "^8.0.0"
+  },
+  "packageManager": "pnpm@9.3.0",
+  "engines": {
+    "node": ">=20.0.0",
+    "pnpm": ">=9.0.0",
+    "npm": "Please use pnpm instead of npm to install dependencies",
+    "yarn": "Please use pnpm instead of yarn to install dependencies"
   }
 }
