--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/compiler": "~18.2.0",
     "@angular/core": "~18.2.0",
     "@angular/forms": "~18.2.0",
+    "@angular-eslint/test-utils": "^18.4.0",
     "@angular/platform-browser": "~18.2.0",
     "@angular/platform-browser-dynamic": "~18.2.0",
     "@angular/platform-server": "~18.2.0",
@@ -43,25 +44,40 @@
     "@nx/eslint-plugin": "20.0.7",
     "@nx/jest": "20.0.7",
     "@nx/js": "20.0.7",
-    "@nx/next": "20.0.7",
     "@nx/nest": "20.0.7",
+    "@nx/next": "20.0.7",
     "@nx/node": "20.0.7",
     "@nx/web": "20.0.7",
     "@nx/webpack": "20.0.7",
     "@nx/workspace": "20.0.7",
     "@schematics/angular": "~18.2.0",
-    "@swc-node/register": "~1.9.1",
-    "@swc/core": "~1.5.7",
+    "@swc-node/register": "~1.10.9",
+    "@swc/core": "~1.7.42",
     "@swc/helpers": "~0.5.11",
     "@types/express": "4.17.14",
-    "@types/jest": "^29.4.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "20.0.0",
-    "@typescript-eslint/utils": "^8.0.0",
+    "@typescript-eslint/utils": "^8.12.2",
+    "@typescript-eslint/rule-tester": "^8.12.2",
     "angular-eslint": "^18.3.0",
+    "esbuild": "^0.19.2",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
-    "jest": "^29.4.1",
+    "eslint-plugin-deprecation": "3.0.0",
+    "eslint-plugin-eslint-comments": "3.2.0",
+    "eslint-plugin-functional": "6.6.3",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-jest": "28.8.3",
+    "eslint-plugin-jsdoc": "^48.5.0",
+    "eslint-plugin-max-params-no-constructor": "0.0.4",
+    "eslint-plugin-rxjs": "5.0.3",
+    "eslint-plugin-simple-import-sort": "12.1.0",
+    "eslint-plugin-sonarjs": "2.0.4",
+    "eslint-plugin-unicorn": "54.0.0",
+    "eslint-plugin-unused-imports": "3.2.0",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "~14.1.0",
     "nx": "20.0.7",
     "nx-cloud": "19.1.0",
@@ -70,12 +86,16 @@
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.5.2",
-    "typescript-eslint": "^8.0.0"
+    "typescript-eslint": "^8.0.0",
+    "verdaccio": "^5.0.4"
   },
   "engines": {
     "node": ">=20.0.0",
     "pnpm": ">=9.0.0",
     "npm": "Please use pnpm instead of npm to install dependencies",
     "yarn": "Please use pnpm instead of yarn to install dependencies"
+  },
+  "nx": {
+    "includedScripts": []
   }
 }
