--- a/packages/smart-eslint/project.json
+++ b/packages/smart-eslint/project.json
@@ -21,7 +21,6 @@
         "main": "packages/smart-eslint/src/index.ts",
         "tsConfig": "packages/smart-eslint/tsconfig.lib.json",
         "assets": [],
-        "generatePackageJson": true,
         "format": ["cjs"]
       }
     },
@@ -35,6 +34,12 @@
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "packages/smart-eslint/jest.config.ts"
+      }
+    },
+    "lint": {
+      "executor": "@nx/eslint:lint",
+      "options": {
+        "lintFilePatterns": ["packages/smart-eslint/**/*.ts"]
       }
     }
   }
