--- a/packages/eslint-plugin/project.json
+++ b/packages/eslint-plugin/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "smart-eslint",
+  "name": "eslint-plugin",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "packages/smart-eslint/src",
+  "sourceRoot": "packages/eslint-plugin/src",
   "projectType": "library",
   "release": {
     "version": {
@@ -17,9 +17,9 @@
       "executor": "@nx/esbuild:esbuild",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/packages/smart-eslint",
-        "main": "packages/smart-eslint/src/index.ts",
-        "tsConfig": "packages/smart-eslint/tsconfig.lib.json",
+        "outputPath": "dist/packages/eslint-plugin",
+        "main": "packages/eslint-plugin/src/index.ts",
+        "tsConfig": "packages/eslint-plugin/tsconfig.lib.json",
         "assets": [],
         "format": ["cjs"]
       }
@@ -33,13 +33,13 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "packages/smart-eslint/jest.config.ts"
+        "jestConfig": "packages/eslint-plugin/jest.config.ts"
       }
     },
     "lint": {
       "executor": "@nx/eslint:lint",
       "options": {
-        "lintFilePatterns": ["packages/smart-eslint/**/*.ts"]
+        "lintFilePatterns": ["packages/eslint-plugin/**/*.ts"]
       }
     }
   }
