lint rules added and applied to lib

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,5 +20,5 @@
       "@smarttools/eslint-plugin": ["packages/eslint-plugin/src/index.ts"]
     }
   },
-  "exclude": ["node_modules", "tmp"]
+  "exclude": ["node_modules", "tmp", "**/eslint.config.js"]
 }
