--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
+    "start:documentation": "nx serve documentation --configuration=serve --port=4201",
     "build": "nx affected:build",
     "lint": "nx affected:lint",
     "lint:fix": "nx affected:lint --fix",
@@ -14,17 +15,21 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-eslint/test-utils": "^18.4.0",
     "@angular/animations": "~18.2.0",
     "@angular/common": "~18.2.0",
     "@angular/compiler": "~18.2.0",
     "@angular/core": "~18.2.0",
     "@angular/forms": "~18.2.0",
-    "@angular-eslint/test-utils": "^18.4.0",
     "@angular/platform-browser": "~18.2.0",
     "@angular/platform-browser-dynamic": "~18.2.0",
     "@angular/platform-server": "~18.2.0",
     "@angular/router": "~18.2.0",
     "@angular/ssr": "~18.2.0",
+    "@ng-doc/app": "18.3.0",
+    "@ng-doc/builder": "18.3.0",
+    "@ng-doc/core": "18.3.0",
+    "@ng-doc/ui-kit": "18.3.0",
     "express": "~4.18.2",
     "rxjs": "~7.8.0",
     "zone.js": "~0.14.3"
@@ -57,8 +62,8 @@
     "@types/express": "4.17.14",
     "@types/jest": "^29.5.14",
     "@types/node": "20.0.0",
-    "@typescript-eslint/utils": "^8.12.2",
     "@typescript-eslint/rule-tester": "^8.12.2",
+    "@typescript-eslint/utils": "^8.12.2",
     "angular-eslint": "^18.3.0",
     "esbuild": "^0.19.2",
     "eslint": "^9.8.0",
