--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -12,7 +12,10 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "esnext",
-    "lib": ["es2020", "dom"],
+    "lib": [
+      "es2020",
+      "dom"
+    ],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
@@ -23,8 +26,14 @@
       "@ng-doc/generated/*": [
         "./ng-doc/documentation/*"
       ],
-      "@smarttools/eslint-plugin": ["packages/eslint-plugin/src/index.ts"]
+      "@smarttools/eslint-plugin": [
+        "packages/eslint-plugin/src/index.ts"
+      ]
     }
   },
-  "exclude": ["node_modules", "tmp", "**/eslint.config.js"]
+  "exclude": [
+    "node_modules",
+    "tmp",
+    "**/eslint.config.js"
+  ]
 }
