--- a/packages/eslint-plugin/project.json
+++ b/packages/eslint-plugin/project.json
@@ -17,7 +17,7 @@
       "executor": "@nx/esbuild:esbuild",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/packages/@smarttools/eslint-plugin",
+        "outputPath": "dist/packages/eslint-plugin",
         "main": "packages/eslint-plugin/src/index.ts",
         "tsConfig": "packages/eslint-plugin/tsconfig.lib.json",
         "assets": [],
