--- a/package.json
+++ b/package.json
@@ -15,56 +15,57 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-eslint/test-utils": "^18.4.0",
-    "@angular/animations": "~18.2.0",
-    "@angular/common": "~18.2.0",
-    "@angular/compiler": "~18.2.0",
-    "@angular/core": "~18.2.0",
-    "@angular/forms": "~18.2.0",
-    "@angular/platform-browser": "~18.2.0",
-    "@angular/platform-browser-dynamic": "~18.2.0",
-    "@angular/platform-server": "~18.2.0",
-    "@angular/router": "~18.2.0",
-    "@angular/ssr": "~18.2.0",
+    "@angular-eslint/test-utils": "19.0.2",
+    "@angular/animations": "19.0.5",
+    "@angular/common": "19.0.5",
+    "@angular/compiler": "19.0.5",
+    "@angular/core": "19.0.5",
+    "@angular/forms": "19.0.5",
+    "@angular/platform-browser": "19.0.5",
+    "@angular/platform-browser-dynamic": "19.0.5",
+    "@angular/platform-server": "19.0.5",
+    "@angular/router": "19.0.5",
+    "@angular/ssr": "19.0.6",
     "@ng-doc/app": "18.3.0",
     "@ng-doc/builder": "18.3.0",
     "@ng-doc/core": "18.3.0",
     "@ng-doc/ui-kit": "18.3.0",
     "express": "~4.18.2",
     "rxjs": "~7.8.0",
-    "zone.js": "~0.14.3"
+    "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~18.2.0",
-    "@angular-devkit/core": "~18.2.0",
-    "@angular-devkit/schematics": "~18.2.0",
-    "@angular/cli": "~18.2.0",
-    "@angular/compiler-cli": "~18.2.0",
-    "@angular/language-service": "~18.2.0",
+    "@angular-devkit/build-angular": "19.0.6",
+    "@angular-devkit/core": "19.0.6",
+    "@angular-devkit/schematics": "19.0.6",
+    "@angular/cli": "~19.0.0",
+    "@angular/compiler-cli": "19.0.5",
+    "@angular/language-service": "19.0.5",
     "@eslint/js": "^9.8.0",
-    "@nx/angular": "20.1.0",
-    "@nx/cypress": "20.1.0",
-    "@nx/esbuild": "20.1.0",
-    "@nx/eslint": "20.1.0",
-    "@nx/eslint-plugin": "20.1.0",
-    "@nx/jest": "20.1.0",
-    "@nx/js": "20.1.0",
+    "@nx/angular": "20.3.0",
+    "@nx/cypress": "20.3.0",
+    "@nx/esbuild": "20.3.0",
+    "@nx/eslint": "20.3.0",
+    "@nx/eslint-plugin": "20.3.0",
+    "@nx/jest": "20.3.0",
+    "@nx/js": "20.3.0",
     "@nx/nest": "20.3.0",
-    "@nx/next": "20.1.0",
-    "@nx/node": "20.1.0",
-    "@nx/web": "20.1.0",
-    "@nx/webpack": "20.1.0",
-    "@nx/workspace": "20.1.0",
-    "@schematics/angular": "~18.2.0",
+    "@nx/next": "20.3.0",
+    "@nx/node": "20.3.0",
+    "@nx/web": "20.3.0",
+    "@nx/webpack": "20.3.0",
+    "@nx/workspace": "20.3.0",
+    "@schematics/angular": "19.0.6",
     "@swc-node/register": "~1.10.9",
     "@swc/core": "~1.7.42",
     "@swc/helpers": "~0.5.11",
     "@types/express": "4.17.14",
     "@types/jest": "^29.5.14",
     "@types/node": "20.0.0",
+    "@typescript-eslint/parser": "^8.13.0",
     "@typescript-eslint/rule-tester": "^8.12.2",
-    "@typescript-eslint/utils": "^8.12.2",
-    "angular-eslint": "^18.3.0",
+    "@typescript-eslint/utils": "^8.13.0",
+    "angular-eslint": "19.0.2",
     "esbuild": "^0.19.2",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
@@ -82,14 +83,14 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.7.0",
-    "jest-preset-angular": "~14.1.0",
-    "nx": "20.1.0",
+    "jest-preset-angular": "14.4.2",
+    "nx": "20.3.0",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "~5.5.2",
-    "typescript-eslint": "^8.12.2",
+    "typescript": "5.6.3",
+    "typescript-eslint": "^8.13.0",
     "verdaccio": "^5.0.4"
   },
   "engines": {
