--- a/packages/eslint-plugin/project.json
+++ b/packages/eslint-plugin/project.json
@@ -15,20 +15,14 @@
   "targets": {
     "build-lib": {
       "executor": "@nx/esbuild:esbuild",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/packages/eslint-plugin",
         "main": "packages/eslint-plugin/src/index.ts",
         "tsConfig": "packages/eslint-plugin/tsconfig.lib.json",
-        "assets": [
-          "packages/eslint-plugin/*.md"
-        ],
+        "assets": ["packages/eslint-plugin/*.md"],
         "generatePackageJson": true,
-        "format": [
-          "cjs"
-        ],
+        "format": ["cjs"],
         "dts": true,
         "bundle": true,
         "thirdParty": true
@@ -36,9 +30,7 @@
     },
     "build": {
       "executor": "nx:run-commands",
-      "dependsOn": [
-        "build-lib"
-      ],
+      "dependsOn": ["build-lib"],
       "options": {
         "command": "echo 'Copying types...' && cp dist/packages/eslint-plugin/src/index.d.ts dist/packages/eslint-plugin"
       }
