--- a/package.json
+++ b/package.json
@@ -26,36 +26,36 @@
     "@angular/platform-server": "19.1.2",
     "@angular/router": "19.1.2",
     "@angular/ssr": "19.1.2",
-    "express": "~4.21.2",
+    "express": "4.21.2",
     "zone.js": "0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "19.1.3",
     "@angular-devkit/core": "19.1.3",
     "@angular-devkit/schematics": "19.1.3",
-    "@angular/cli": "~19.1.3",
+    "@angular/cli": "~19.1.0",
     "@angular/compiler-cli": "19.1.2",
     "@angular/language-service": "19.1.2",
     "@eslint/js": "^9.17.0",
-    "@nx/angular": "20.3.3",
-    "@nx/cypress": "20.3.3",
-    "@nx/esbuild": "20.3.3",
-    "@nx/eslint": "20.3.3",
-    "@nx/eslint-plugin": "20.3.3",
-    "@nx/jest": "20.3.3",
-    "@nx/js": "20.3.3",
-    "@nx/nest": "20.3.3",
-    "@nx/next": "20.3.3",
-    "@nx/node": "20.3.3",
+    "@nx/angular": "20.4.0",
+    "@nx/cypress": "20.4.0",
+    "@nx/esbuild": "20.4.0",
+    "@nx/eslint": "20.4.0",
+    "@nx/eslint-plugin": "20.4.0",
+    "@nx/jest": "20.4.0",
+    "@nx/js": "20.4.0",
+    "@nx/nest": "20.4.0",
+    "@nx/next": "20.4.0",
+    "@nx/node": "20.4.0",
     "@nx/web": "20.4.0",
-    "@nx/webpack": "20.3.3",
-    "@nx/workspace": "20.3.3",
+    "@nx/webpack": "20.4.0",
+    "@nx/workspace": "20.4.0",
     "@schematics/angular": "19.1.3",
     "@stylistic/eslint-plugin-js": "2.13.0",
     "@swc-node/register": "~1.10.9",
     "@swc/core": "~1.10.4",
     "@swc/helpers": "~0.5.15",
-    "@types/express": "5.0.0",
+    "@types/express": "4.17.21",
     "@types/jest": "^29.5.14",
     "@types/node": "22.13.0",
     "@typescript-eslint/parser": "^8.21.0",
@@ -80,7 +80,7 @@
     "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "14.4.2",
     "jscpd": "4.0.5",
-    "nx": "20.3.3",
+    "nx": "20.4.0",
     "prettier": "^3.4.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
