--- a/packages/eslint-plugin/package.json
+++ b/packages/eslint-plugin/package.json
@@ -6,7 +6,7 @@
   "types": "./index.d.ts",
   "exports": {
     ".": {
-      "import": "./index.csj",
+      "import": "./index.cjs",
       "require": "./index.cjs",
       "types": "./index.d.ts"
     }
