--- a/package.json
+++ b/package.json
@@ -15,37 +15,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-eslint/test-utils": "19.0.2",
+    "@angular-eslint/test-utils": "19.2.1",
     "express": "4.21.2",
-    "zone.js": "0.15.0"
+    "zone.js": "0.15.0",
+    "@angular/core": "19.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
-    "@nx/angular": "20.4.6",
-    "@nx/cypress": "20.4.6",
-    "@nx/esbuild": "20.4.6",
-    "@nx/eslint": "20.4.6",
-    "@nx/eslint-plugin": "20.4.6",
-    "@nx/jest": "20.4.6",
-    "@nx/js": "20.4.6",
-    "@nx/nest": "20.4.6",
-    "@nx/next": "20.4.6",
-    "@nx/node": "20.4.6",
-    "@nx/web": "20.4.6",
-    "@nx/webpack": "20.4.6",
+    "@nx/angular": "20.5.0",
+    "@nx/cypress": "20.5.0",
+    "@nx/esbuild": "20.5.0",
+    "@nx/eslint": "20.5.0",
+    "@nx/eslint-plugin": "20.5.0",
+    "@nx/jest": "20.5.0",
+    "@nx/js": "20.5.0",
+    "@nx/nest": "20.5.0",
+    "@nx/next": "20.5.0",
+    "@nx/node": "20.5.0",
+    "@nx/web": "20.5.0",
+    "@nx/webpack": "20.5.0",
     "@nx/workspace": "20.5.0",
-    "@schematics/angular": "19.1.5",
-    "@stylistic/eslint-plugin-js": "4.0.1",
+    "@schematics/angular": "19.2.1",
+    "@stylistic/eslint-plugin-js": "4.2.0",
     "@swc-node/register": "~1.10.9",
     "@swc/core": "~1.10.16",
     "@swc/helpers": "~0.5.15",
     "@types/express": "5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "22.13.5",
-    "@typescript-eslint/parser": "^8.25.0",
-    "@typescript-eslint/rule-tester": "^8.25.0",
-    "@typescript-eslint/utils": "^8.25.0",
-    "angular-eslint": "19.0.2",
+    "@typescript-eslint/parser": "^8.26.0",
+    "@typescript-eslint/rule-tester": "^8.26.0",
+    "@typescript-eslint/utils": "^8.26.0",
+    "angular-eslint": "19.2.1",
     "esbuild": "^0.19.2",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^9.1.0",
@@ -57,21 +58,21 @@
     "eslint-plugin-max-params-no-constructor": "0.0.4",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "eslint-plugin-sonarjs": "3.0.1",
-    "eslint-plugin-unicorn": "56.0.1",
+    "eslint-plugin-unicorn": "57.0.0",
     "eslint-plugin-unused-imports": "4.1.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "14.4.2",
     "jscpd": "4.0.5",
-    "nx": "20.4.6",
+    "nx": "20.5.0",
     "prettier": "^3.5.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.2",
     "tslib": "^2.3.0",
     "typescript": "5.7.3",
-    "typescript-eslint": "^8.25.0",
-    "verdaccio": "^6.0.5"
+    "typescript-eslint": "^8.26.0",
+    "verdaccio": "6.0.5"
   },
   "engines": {
     "node": ">=20.0.0",
