--- a/package.json
+++ b/package.json
@@ -15,27 +15,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-eslint/test-utils": "19.2.1",
+    "@angular-eslint/test-utils": "19.3.0",
     "express": "4.21.2",
     "zone.js": "0.15.0",
     "@angular/core": "19.2.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.23.0",
-    "@nx/angular": "20.6.4",
-    "@nx/cypress": "20.6.4",
-    "@nx/esbuild": "20.6.4",
-    "@nx/eslint": "20.6.4",
-    "@nx/eslint-plugin": "20.6.4",
+    "@eslint/js": "^9.24.0",
+    "@nx/angular": "20.7.1",
+    "@nx/cypress": "20.7.1",
+    "@nx/esbuild": "20.7.1",
+    "@nx/eslint": "20.7.1",
+    "@nx/eslint-plugin": "20.7.1",
     "@nx/jest": "20.7.1",
-    "@nx/js": "20.6.4",
-    "@nx/nest": "20.6.4",
-    "@nx/next": "20.6.4",
-    "@nx/node": "20.6.4",
-    "@nx/web": "20.6.4",
-    "@nx/webpack": "20.6.4",
-    "@nx/workspace": "20.6.4",
-    "@schematics/angular": "19.2.1",
+    "@nx/js": "20.7.1",
+    "@nx/nest": "20.7.1",
+    "@nx/next": "20.7.1",
+    "@nx/node": "20.7.1",
+    "@nx/web": "20.7.1",
+    "@nx/webpack": "20.7.1",
+    "@nx/workspace": "20.7.1",
+    "@schematics/angular": "19.2.6",
     "@stylistic/eslint-plugin-js": "4.2.0",
     "@swc-node/register": "~1.10.10",
     "@swc/core": "~1.11.18",
@@ -43,13 +43,13 @@
     "@types/express": "5.0.1",
     "@types/jest": "^29.5.14",
     "@types/node": "22.14.0",
-    "@typescript-eslint/parser": "^8.28.0",
-    "@typescript-eslint/rule-tester": "^8.28.0",
-    "@typescript-eslint/utils": "^8.28.0",
+    "@typescript-eslint/parser": "^8.29.0",
+    "@typescript-eslint/rule-tester": "^8.29.0",
+    "@typescript-eslint/utils": "^8.29.0",
     "angular-eslint": "19.3.0",
     "esbuild": "^0.19.2",
-    "eslint": "^9.23.0",
-    "eslint-config-prettier": "^10.1.1",
+    "eslint": "^9.24.0",
+    "eslint-config-prettier": "10.1.1",
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-functional": "9.0.1",
     "eslint-plugin-import": "2.31.0",
@@ -65,7 +65,7 @@
     "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "14.5.3",
     "jscpd": "4.0.5",
-    "nx": "20.6.4",
+    "nx": "20.7.1",
     "prettier": "^3.5.3",
     "ts-jest": "^29.3.0",
     "ts-node": "10.9.2",
