--- a/nx.json
+++ b/nx.json
@@ -61,9 +61,7 @@
     "version": {
       "preVersionCommand": "npx nx run-many -t build"
     },
-    "projects": [
-      "eslint-plugin"
-    ]
+    "projects": ["eslint-plugin"]
   },
   "plugins": [
     {
