--- a/packages/eslint-plugin/project.json
+++ b/packages/eslint-plugin/project.json
@@ -5,19 +5,16 @@
   "projectType": "library",
   "release": {
     "version": {
-      "generatorOptions": {
-        "packageRoot": "dist/{projectRoot}",
-        "currentVersionResolver": "git-tag"
-      }
+      "currentVersionResolver": "git-tag",
+      "preserveLocalDependencyProtocols": false,
+      "manifestRootsToUpdate": ["dist/{projectRoot}"]
     }
   },
   "tags": [],
   "targets": {
     "build-lib": {
       "executor": "@nx/esbuild:esbuild",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/packages/eslint-plugin",
         "main": "packages/eslint-plugin/src/index.ts",
@@ -30,9 +27,7 @@
             "output": "."
           }
         ],
-        "format": [
-          "cjs"
-        ],
+        "format": ["cjs"],
         "dts": true,
         "bundle": true,
         "thirdParty": false,
@@ -50,9 +45,7 @@
     },
     "build": {
       "executor": "nx:run-commands",
-      "dependsOn": [
-        "build-lib"
-      ],
+      "dependsOn": ["build-lib"],
       "options": {
         "command": "echo 'Copying types...' && cp dist/packages/eslint-plugin/src/index.d.ts dist/packages/eslint-plugin"
       }
@@ -64,9 +57,7 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": [
-        "{workspaceRoot}/coverage/{projectRoot}"
-      ],
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "packages/eslint-plugin/jest.config.ts"
       }
@@ -74,9 +65,7 @@
     "lint": {
       "executor": "@nx/eslint:lint",
       "options": {
-        "lintFilePatterns": [
-          "packages/eslint-plugin/**/*.ts"
-        ]
+        "lintFilePatterns": ["packages/eslint-plugin/**/*.ts"]
       }
     }
   }
