--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,5 @@ Thumbs.db
 # NgDoc files
 /ng-doc
 smart-eslint.code-workspace
+.cursor/rules/nx-rules.mdc
+.github/instructions/nx.instructions.md
